--- a/dashboard/index.qmd
+++ b/dashboard/index.qmd
@@ -4,15 +4,15 @@ format: html
 page-layout: full
 ---
 
-Søk her:
+<link rel="stylesheet" href="../styles.css">
 
 <div id="search-container">
-  <input id="search-box" type="text" placeholder="Search..." />
+  <input id="search-box" type="text" placeholder="Søk..." />
+  <div id="filters"></div>
 </div>
 
-eller bruk filtrene for å velge metode, tema eller programmeringsspråk:
+<div id="project-counter"></div>
 
-<div id="filters"></div>
 <div id="projects-container">
   <div id="projects" class="grid"></div>
 </div>
