--- a/dashboard/index.qmd
+++ b/dashboard/index.qmd
@@ -4,32 +4,32 @@ format: html
 page-layout: full
 ---
 
-<!-- Link stylesheet -->
+<!-- Link til CSS stylesheet -->
 <link rel="stylesheet" href="../styles.css">
 
-<!-- Introductory explanation text -->
+<!-- Introtekst topp -->
 <div class="explanation-text">
   Her finner du kode delt av SVA-forskere. Bruk søkefeltet og filtrene for å lete i biblioteket.
 </div>
 
-<!-- Search input and filters -->
+<!-- Søkefelt og filtre -->
 <div id="search-container">
   <input id="search-box" type="text" placeholder="Søk her..." />
   <div id="filters"></div>
 </div>
 
-<!-- Project counter -->
+<!-- Resultatteller (x prosjekter) -->
 <div id="project-counter"></div>
 
-<!-- Projects grid container -->
+<!-- Resultater (container med prosjekter) -->
 <div id="projects-container">
   <div id="projects" class="grid"></div>
 </div>
 
-<!-- Load filtering and rendering logic -->
+<!-- JS: filtrering og søk -->
 <script src="filters.js"></script>
 
-<!-- Footer: Contact section -->
+<!-- Footer: Kreditering og kontakt -->
 <section id="contact" class="contact-footer">
   <b>Kreditering:</b> Vi oppfordrer til å kreditere forfatterne når du bruker store deler av andres kode.
   <p>
